yet another attempt at Surefire issue on Jenkins