@@ -649,6 +649,7 @@
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                     <reportFormat>xml</reportFormat>
+                    <runOrder>alphabetical</runOrder>
                     <!-- excludes>
                         <exclude>**/*SystemTest.java</exclude>
                         <exclude>**/*IntTest.java</exclude>
@@ -657,7 +658,7 @@
                         <exclude>${integrationTests}</exclude>
                         <exclude>${systemTests}</exclude>
                     </excludes>
-                    <argLine> -Xms512m -Xmx4096m -XX:MaxPermSize=512m </argLine>
+                    <argLine> -Xms512m -Xmx4096m </argLine>
                 </configuration>
             </plugin>
             <!-- pluging to run tests after 'package' phase in 'integration-test' -->
